# enzo-dev

./: .README.swp  .gitignore  .gitmodules  .hgchurn  .hgignore  .hgtags  .readthedocs.yaml  AnnaTest.txt  BRANCH_POINT  CHANGELOG  CITATION  LICENSE  PARAMETERS_gFLDProblem  PARAMETERS_gFLDSplit  README  README.md  REYNOLDS-TODO  bitbucket-pipelines.yml  build.sh  configure  test.sh  test.txt
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  config.yml  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-or-improvement-request.md
doc/doxy/: Doxyfile
doc/examples/: 1DHydroShockTubes.enzo  AMRCosmologySimulation.enzo  AMRShockTube.enzo  BrioWu-MHD-1D.enzo  CollideTest.enzo  CoolingTest.enzo  DoubleMachReflection.enzo  DrivenTurbulence3D.enzo  FLD_LWRadParameters.enzo  FreeExpansion.enzo  FreeExpansionAMR.enzo  GalaxySimulation.enzo  GravityStripTest.enzo  HD-Sedov-Taylor-BlastWave.enzo  ImplosionAMR.enzo  MHD2DBlastWave.enzo  NohProblem2DAMR.enzo  NohProblem3D.enzo  NohProblem3DAMR.enzo  PhotonTest.enzo  PressurelessCollapse.enzo  ProtostellarCollapse_Std.enzo  RampedKelvinHelmholtz2D.enzo  RotatingCylinder.enzo  SedovBlast-MHD-2D-Gardiner.enzo  SedovBlast.enzo  SedovBlastAMR.enzo  ShearingBox.enzo  SphericalInfall.enzo  StripTest.enzo  TestOrbit.enzo
doc/flowchart/: CreateSubgridList.html  DetermineDT.html  EvolveHierarchy.html  EvolveLevel.html  EvolveLevel_CorrectForRefinedFluxes.html  EvolveLevel_GetProjectedBoundaryFluxes.html  EvolveLevel_Gravity.html  EvolveLevel_ProjectSolutionToParentGrid.html  EvolveLevel_Sub1.html  EvolveLevel_UpdateFromFinerGrids.html  RebuildHierarchy.html  SolveHydroEquations.html  index.html  main.html
doc/implicit_fld/: Makefile  gfld_guide.tex  gfldproblem_UG.tex  sources.bib
doc/makefile_examples/: Make.mach.bwoshea-bender  Make.mach.bwoshea-fnord  Make.mach.bwoshea-thunderhead  Make.mach.gso-mac  Make.mach.gso-macports  Make.mach.rpwagner-cable  Make.mach.sdsc-datastar
doc/manual/: Makefile  README
doc/split_fld/: Makefile  gfldsplit_UG.tex  gfldsplit_guide.tex  sources.bib
doc/userguide/: Index.txt  LICENSE  TO-DO  bananabread.html  changelog.html  code_bundle.html  contact.html  documentation.html  enzo.css  general.html  index.html  left.html  publications.html  referee_publications.html  software.html  top.html
input/: LW_J21.in  TREECOOL  cool_rates.in_300K  cooling.pro  enzo_parameter_conflicts.txt  gen_equilibrium_table.py  lookup_metal0.3.data  make_Zcool_table.pro  metal_cool.dat_z=15  metal_cooling.pro  restart.sh  resubmit.sh
method-paper-joss-2019/: LICENSE  README.md  paper.bib  paper.md
patch/: Grid_GasolineCosmologyGalaxyInitializeGrid.C  Makefile  Makefile.rej
run/: README  fraggle.py  index.html  make_new_tests.py  test_makespreadsheet.py  test_runner.py  test_type.py.template
run/CollapseTest/: CollapseTestNonCosmological.enzo  analysis.ipynb
run/DrivenTurbulence3D/: DrivenTurbulence3D.enzo  DrivenTurbulence3D.enzotest
run/FDMCollapse/: SchCollapse.enzo  init.py
run/FLD/: FLDPhotonTest.enzo
run/FuzzyDarkMatter/: FDMCollapse.enzo  FDMCosmology.enzo  FDMTest.enzo  LightBoson.enzo  init.py
run/StarParticle/: TestStarParticle.enzo
run/run_templates/: README  local.run  local_nompi.run  nics-kraken.run  nics_kraken.run
src/: Makefile  qsub_compile_enzo.sh
src/P-GroupFinder/: .cvsignore  Make.config.objects  Makefile  allocate.c  allvars.c  allvars.h  cmpfunc.c  find_subgroups.c  forcetree.c  forcetree.h  h5utilities.c  h5utilities.h  io_enzo.c  io_hdf.c  io_hdf5.c  io_input.c  main.c  ngbtree.c  ngbtree.h  pgroupfinder.ps  plot_circles.pro  plot_groups.pro  plot_groups_gas.pro  properties.c  proto.h  read_catalogue.pro  subfind.c  subvars.h  trace_particles.pro  unbind.c
src/TREECOOL/: README  TREECOOL.py
src/anyl/: AnalyzeCluster.C  AnalyzeClusterComputeClumpingFactor.C  AnalyzeClusterReadParameterFile.C  AnalyzeClusters.h  Grid_AddToDiskProfile.C  Grid_AddToRadialProfile.C  Grid_AddToVerticalProfile.C  Grid_AnalyzeClusters.h  Grid_CollectParticleInfo.C  Grid_FindMaximumBaryonDensity.C  Grid_FindMeanVelocity.C  Make.config.objects  Makefile
src/enzo/: .Grid.h.swp  AGN_Volume_Cylinder.C  AGN_Volume_Cylinder.h  AGN_Volume_Grid.C  AGN_Volume_Grid.h  AMRH5writer.C  AMRH5writer.h  ActiveParticle.C  ActiveParticle.h  ActiveParticleDepositMass.C  ActiveParticleFinalize.C  ActiveParticleFindAll.C  ActiveParticleInitialize.C  ActiveParticleResetAccelerations.C  ActiveParticleRoutines.C  ActiveParticle_AGNParticle.C  ActiveParticle_AGNParticle.h  ActiveParticle_AccretingParticle.C  ActiveParticle_AccretingParticle.h  ActiveParticle_CenOstriker.C  ActiveParticle_CenOstriker.h  ActiveParticle_DisableParticle.C  ActiveParticle_FindAccretionSphere.C  ActiveParticle_GalaxyParticle.C  ActiveParticle_GalaxyParticle.h  ActiveParticle_Kravtsov.C  ActiveParticle_Kravtsov.h  ActiveParticle_MirrorToParticle.C  ActiveParticle_PopIII.C  (+1712 more)
src/mpgrafic/degraf/: AUTHORS  Makefile.in  conf.mac  conf.ranger_intel  config.h.in  configure  configure.in  degraf.kdevelop  degraf.kdevses
src/mpgrafic/degraf/autom4te.cache/: output.1  requests  traces.0  traces.1
src/mpgrafic/degraf/src/: .gdb_history  Makefile.am  Makefile.in  all.nml  degraf.F90  enzo.params  enzo_io.F90  grafic_io.F90  grafic_types.F90  grid.nml  hdf_io.F90  lowpass.F90  noshift.nml  parallel_io.c  parameters.nml  params.nml  transform.F90
src/mpgrafic/degraf/templates/: f
src/mpgrafic/mpgrafic-0.2/: Makefile.in  conf.discover  conf.kraken  conf.mac  conf.ranger_intel  conf.ranger_pgi  conf.red  configure  configure.ac
src/mpgrafic/mpgrafic-0.2/autom4te.cache/: output.0  requests  traces.0  traces.1
src/mpgrafic/mpgrafic-0.2/src/: Makefile.am  Makefile.in  SampleParameterFile  cap.sh  convert_fftw.c  do_rfft3d.f90  enzo.out  enzo_io.F90  grafic1.inc  grafic_io.F90  grafic_types.F90  hdf_io.F90  make_image.pro  make_image.py  mpgrafic.F90  mpic4.F90  mpnorm.F90  mppower.F90  parallel_io.c  paramfile  params.in  params3.in  paste.F90  random.F90  test_fft.pro  time.F90  transform.F90  util.F90
(+1496 files in other folders)
